--- a/blog/static/blog/home.css
+++ b/blog/static/blog/home.css
@@ -108,3 +108,47 @@
 a {
   text-decoration: none;
 }
+
+/* Adapt for mobile */
+@media (max-width: 768px) {
+  #welcome {
+    padding: 2rem 6%;
+  }
+  
+  #welcome h2 {
+    font-size: 2.5rem;
+    margin: 0 0 0 1rem;
+  }
+
+  #welcome p {
+    font-size: 1.2rem;
+  }
+
+  #latest-posts {
+    width: 90%;
+    margin: 2rem auto;
+  }
+
+  #latest-posts ul {
+    flex-wrap: wrap;
+  }
+
+  #latest-posts li {
+    flex: 0 0 100%;
+    margin-bottom: 1rem;
+  }
+
+  #about h2 {
+    font-size: 2rem;
+  }
+
+  #about p {
+    font-size: 1.2rem;
+  }
+
+  #all-posts {
+    width: 100%;
+    margin-left: 0;
+  }
+}
+
