--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -38,6 +38,7 @@
     <h2>What I do</h2>
     <p>I am a Software Engineering Student at Conestoga College</p>
     <p>Im Seeking Coop position for the Spring of 2024 (Availability 4, 8, 12 or 16 months)</p>
+    <p>you can go to /admin and see the admin page (username: tester | password:nopermissions)</p>
 </section>
 
 {% endblock content %}
