--- a/blog/templates/blog/stored_posts.html
+++ b/blog/templates/blog/stored_posts.html
@@ -9,6 +9,7 @@
 
 {% block content %}
 
+<h2 id= "stored_posts_h2">Your Stored Posts</h2>
 
 <section id="stored_posts">
     {%if not has_posts%}<h2>You have no posts saved yet!</h2>{%endif%}
