--- a/templates/layout.html
+++ b/templates/layout.html
@@ -16,7 +16,7 @@
 
 <header id='main-navigation'>
     <h1><a href="{% url 'blog-index' %}">My Blog</a></h1>
-    <nav>
+    <nav id="nav">
         <a href="{% url "read-later" %}">Read later</a>
         <a href="{% url "blog-all-posts" %}">All posts</a>
     </nav>
