--- a/blog/static/blog/all_posts.css
+++ b/blog/static/blog/all_posts.css
@@ -39,3 +39,46 @@ body {
     border-radius: 12px;
     background-color: white;
   }
+
+@media (max-width: 768px) {
+  body {
+    background-color: hsl(0, 0%, 90%);
+  }
+
+  #all-posts {
+    margin: 3rem auto;
+    width: 90%;
+    max-width: 90%;
+    min-width: 90%;
+  }
+
+  #all-posts h2 {
+    text-align: center;
+    font-size: 1.5rem;
+    color: #2e2e2e;
+    margin: 2rem 0;
+  }
+
+  ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(12rem, 1fr));
+    gap: 1rem;
+  }
+
+  .post img {
+    width: 5rem;
+    height: 5rem;
+  }
+
+  .post a {
+    height: 15rem;
+    transform-origin: center;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
+    border-radius: 8px;
+    background-color: white;
+  }
+}
+  
