--- a/static/global.css
+++ b/static/global.css
@@ -51,3 +51,17 @@ h3 {
 #main-navigation h1 a:active {
     color: white;
 }
+
+@media (max-width: 768px) {
+    #main-navigation {
+      flex-direction: row;
+      height: auto;
+      padding: 1rem;
+    }
+
+    #nav{
+        margin-left: 1rem;
+    }
+
+    
+  }
