--- a/staticfiles/global.css
+++ b/staticfiles/global.css
@@ -25,7 +25,7 @@ h3 {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 10%;    
+    padding: 0;    
     
 }
 
