--- a/templates/404.html
+++ b/templates/404.html
@@ -3,6 +3,11 @@
 {% block title %}Page not found{% endblock title %}
 
 {% block content %}
-<h1>Sorry</h1>
-<p>The page you tried does not exist</p>
+
+{% comment %} <div style="text-align: center;"> 
+    <h1>Page not found</h1>
+     <p>The page you tried does not exist</p> 
+</div> {% endcomment %}
+
+
 {% endblock content %}
