--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -18,7 +18,7 @@
     <img src="{% static "blog/images/1.JPG"%}" alt="this is victor the creator of the blog">
     <h2>Victor's blog</h2>
     </div>
-    <p>Hello, My name is Victor, I am from Brazil and I want to share with you a little bit of my life</p>
+    <p>Hello, My name is Victor, and I want to share with you a little bit of my life</p>
     </header>        
 </section>
 
@@ -35,10 +35,23 @@
 
 
 <section id='about'>
-    <h2>What I do</h2>
-    <p>I am a Software Engineering Student at Conestoga College</p>
-    <p>Im Seeking Coop position for the Spring of 2024 (Availability 4, 8, 12 or 16 months)</p>
-    <p>you can go to /admin and see the admin page (username: tester | password:nopermissions)</p>
+    <h2>About Me</h2>
+    <p>
+        I am a <strong>Software Engineer</strong> focused on building robust back-end systems and scalable web applications.
+    </p>
+    
+    <div id="contact-links">
+        <p>Let's connect:</p>
+        <ul style="list-style: none; padding: 0;">
+            <li>📧 <a href="mailto:victorbnogueira@gmail.com">Email Me</a></li>
+            <li>🔗 <a href="https://www.linkedin.com/in/victor-barbosa-8b6a53247/" target="_blank">LinkedIn</a></li>
+            <li>💻 <a href="https://github.com/victorbarbosan" target="_blank">GitHub</a></li>
+        </ul>
+    </div>
+
+    <p style="font-size: 0.8rem; color: #666; margin-top: 20px;">
+        © 2026 Victor Barbosa | Hosted on my Raspberry Pi
+    </p>
 </section>
 
 {% endblock content %}
