--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -34,23 +34,23 @@
 </section>
 
 
-<section id='about' style="max-width: 800px; margin: 0 auto; line-height: 1.6;">
+<section id='about' style="margin: 0 auto; line-height: 1.6;">
     <h2>About Me</h2>
     <p>
         I am a <strong>Software Engineer</strong> focused on building robust back-end systems and scalable web applications.
     </p>
     
     <div id="contact-links" style="margin-top: 15px;">
-        <ul style="list-style: none; padding: 0; display: flex; gap: 15px; font-weight: 500;">
-            <li><a href="mailto:victorbnogueira@gmail.com" style="text-decoration: none; color: #007bff;">Email</a></li>
-            <li style="color: #ccc;">|</li>
-            <li><a href="https://www.linkedin.com/in/victor-barbosa-8b6a53247/" target="_blank" style="text-decoration: none; color: #007bff;">LinkedIn</a></li>
-            <li style="color: #ccc;">|</li>
-            <li><a href="https://github.com/victorbarbosan" target="_blank" style="text-decoration: none; color: #007bff;">GitHub</a></li>
+        <ul style="list-style: none; padding: 0; display: flex; gap: 15px; font-weight: 500; justify-content: center">
+            <li><a href="mailto:victorbnogueira@gmail.com" style="text-decoration: none; color: #000000ff;">Email</a></li>
+            <li style="color: #000000ff;">|</li>
+            <li><a href="https://www.linkedin.com/in/victor-barbosa-8b6a53247/" target="_blank" style="text-decoration: none; color: #000000ff;">LinkedIn</a></li>
+            <li style="color: #000000ff;">|</li>
+            <li><a href="https://github.com/victorbarbosan" target="_blank" style="text-decoration: none; color: #000000ff;">GitHub</a></li>
         </ul>
     </div>
 
-    <footer style="font-size: 0.85rem; color: #888; margin-top: 30px; border-top: 1px solid #eee; padding-top: 10px;">
+    <footer style="font-size: 0.85rem; color: #ffeeceff; margin-top: 30px; border-top: 1px solid #eee; padding-top: 10px;">
         © 2026 Victor Barbosa &nbsp;•&nbsp; Hosted on Raspberry Pi
     </footer>
 </section>
